--- a/ChromeExtension/manifest.json
+++ b/ChromeExtension/manifest.json
@@ -16,7 +16,7 @@
     }],
     "action": {
       "default_popup": "popup.html",
-      "default_icon": "icon48.png"
+      "default_icon": "icons/lock-open-solid.svg"
     }
   }
   
